--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-server.port=9001
+server.port=8081
+spring.banner.location=banner.txt
+spring.h2.console.enabled=true
+spring.h2.console.path=/database
 #spring.main.allow-circular-references=true
-#debug=true
+#debug
+
+greeting.message="Hello, CS Students!!"
