Week4: initial commit for Mock testing

--- a/firstproject/build.gradle
+++ b/firstproject/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'joda-time:joda-time:2.2'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
