--- a/myschool/src/main/resources/application.properties
+++ b/myschool/src/main/resources/application.properties
@@ -3,7 +3,6 @@
 
 #h2 configuration (file db)
 spring.datasource.url=jdbc:h2:file:/data/schooldb;AUTO_SERVER=TRUE
-
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -11,10 +10,20 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#spring.datasource.initialization-mode=always
 
+#By default, SQL database initialization is only performed when using an embedded 
+#in-memory database. To always initialize an SQL database, irrespective of its type, 
+#set spring.sql.init.mode to always. Similarly, to disable initialization, 
+#set spring.sql.init.mode to never.
+spring.sql.init.mode=always
 
 #jpa
-#spring.jpa.defer-datasource-initialization=true
+#By default, data.sql scripts get executed before the Hibernate is initialized. 
+#We need Hibernate to create our tables before inserting the data into them. 
+#To achieve this, we need to defer the initialization of our data source. 
+#We will use the below property to achieve this:
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
 
