Week7-Inheritance Mapping and JPQL

--- a/myschool/src/main/resources/application.properties
+++ b/myschool/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.h2.console.path=/h2-console
 #in-memory database. To always initialize an SQL database, irrespective of its type, 
 #set spring.sql.init.mode to always. Similarly, to disable initialization, 
 #set spring.sql.init.mode to never.
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 #jpa
 #By default, data.sql scripts get executed before the Hibernate is initialized. 
