Week8:some JPA examples

--- a/myschool/src/main/resources/application.properties
+++ b/myschool/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 #spring.datasource.url=jdbc:h2:mem:schooldb 
 
 #h2 configuration (file db)
-spring.datasource.url=jdbc:h2:file:/data/schooldb;AUTO_SERVER=TRUE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:file:/data/myschooldb;AUTO_SERVER=TRUE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 #spring.datasource.initialization-mode=always
 
 #By default, SQL database initialization is only performed when using an embedded 
@@ -24,7 +24,7 @@ spring.h2.console.path=/h2-console
 #To achieve this, we need to defer the initialization of our data source. 
 #We will use the below property to achieve this:
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql= true
 
 #Derby Configuration
@@ -32,6 +32,16 @@ spring.jpa.show-sql= true
 #spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
 #spring.datasource.username=admin
 #spring.datasource.password=123
+
+#Derby Configuration
+spring.datasource.url=jdbc:derby://localhost:1527/schooldb;create=true
+spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
+spring.jpa.database-platform=org.hibernate.dialect.DerbyDialect
+spring.datasource.username=admin
+spring.datasource.password=123
+#add to fix following exception: "org.apache.derby.client.am.SqlException: Feature not implemented: createNClob ()"
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 
 #Available values of spring.jpa.hibernate.ddl-auto:
 #none:			No database Schema initialization
