--- a/myschool/build.gradle
+++ b/myschool/build.gradle
@@ -20,10 +20,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    runtimeOnly  'org.apache.derby:derbyclient:10.15.2.0'
+    runtimeOnly  'org.apache.derby:derbytools:10.15.2.0'
 }
 
 tasks.named('test') {
