Week9-RESTful Services

--- a/myschool/src/main/resources/application.properties
+++ b/myschool/src/main/resources/application.properties
@@ -24,7 +24,7 @@
 #To achieve this, we need to defer the initialization of our data source. 
 #We will use the below property to achieve this:
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
 
 #Derby Configuration
