--- a/myschool/build.gradle
+++ b/myschool/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'war'
 	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id 'com.diffplug.eclipse.apt' version '3.37.2'	
 }
 
 group = 'com.demo'
@@ -26,6 +27,9 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly  'org.apache.derby:derbyclient:10.15.2.0'
     runtimeOnly  'org.apache.derby:derbytools:10.15.2.0'
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    
 }
 
 tasks.named('test') {
