--- a/myschool/src/main/resources/application.properties
+++ b/myschool/src/main/resources/application.properties
@@ -27,11 +27,10 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
 
-#Derby Configuration
-#spring.datasource.url=jdbc:derby://localhost:1527/schooldb;create=true
-#spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
-#spring.datasource.username=admin
-#spring.datasource.password=123
+#swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/school-api.html
+springdoc.swagger-ui.operationsSorter=method
 
 #Derby Configuration
 spring.datasource.url=jdbc:derby://localhost:1527/schooldb;create=true
